# brain-tumor-cdss

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
configs/: default.yaml
docs/: ARCHITECTURE.md  EXPERIMENTS.md  contributing.md  index.md
docs/api/: inference.md  preprocessing.md
docs/architecture/: m1.md  mg.md  mm.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/images/: architecture.md
inference/: predict.py
models/: __init__.py
models/m1/: __init__.py  m1_model.py
models/mg/: __init__.py  mg_model.py
models/mm/: __init__.py  mm_model.py
notebooks/: demo.ipynb
preprocessing/: mri_preprocessing.py
sample_data/: README.md  __init__.py
training/: train_m1.py  train_mg.py
weights/: README.md
