[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-tumor-cdss"
version = "1.0.0"
description = "Clinical Decision Support System for Brain Tumor Diagnosis using Multimodal Deep Learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "melmbrain", email = "melmbrain@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "brain tumor", "glioma", "deep learning", "medical imaging",
    "MRI", "gene expression", "clinical decision support",
    "multimodal", "transformer", "SwinUNETR"
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "nibabel>=4.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
monai = ["monai>=1.0.0"]
full = [
    "monai>=1.0.0",
    "SimpleITK>=2.2.0",
    "gseapy>=1.0.0",
    "lifelines>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/melmbrain/brain-tumor-cdss"
Documentation = "https://melmbrain.github.io/brain-tumor-cdss/"
Repository = "https://github.com/melmbrain/brain-tumor-cdss"
Issues = "https://github.com/melmbrain/brain-tumor-cdss/issues"

[project.scripts]
brain-tumor-cdss = "inference.predict:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
